@@ -1,5 +1,12 @@
 2008-09-22  Bean  <bean123ch@gmail.com>
 
+	* fs/ntfs.c (grub_ntfs_iterate_dir): Fix a rare case where $BITMAP is
+	resident and in attribute list.
+
+	* include/grub/ntfs.h (BMP_LEN): Removed.
+
+2008-09-22  Bean  <bean123ch@gmail.com>
+
 	* disk/ata.c (grub_apapi_open): Initialize devfnd, no need to set
 	scsi->name and scsi->luns, as they will be set in grub_scsi_open.
 
